--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Wesbite is live baybee</h1>
+    <h1>
+      <centre><i>Website</i></centre>
+    </h1>
   </body>
 </html>
