--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>assignment one</title>
   </head>
   <body>
     <h1>Assignment One</h1>
