--- a/week2/index.html
+++ b/week2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>week two</title>
   </head>
   <body>
     <h1>Week 2!</h1>
