--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   </head>
   <body>
     <h1>Interactive Media</h1>
+    <a href="week2/index.html"> Week Two</a>
+    <img
+      src="kitty.jpeg"
+      alt="hello kitty wearing a pink flower and pink dress."
+    />
     <h2>
       Instructor: Dr. Rohit Ashok Khot Email: rohitashok.khot@rmit.edu.au
       (Weekdays 9am-5pm)
