--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img
       src="kitty.jpeg"
       alt="hello kitty wearing a pink flower and pink dress."
+      height="200"
     />
     <h2>
       Instructor: Dr. Rohit Ashok Khot Email: rohitashok.khot@rmit.edu.au
