--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       Instructor: Dr. Rohit Ashok Khot Email: rohitashok.khot@rmit.edu.au
       (Weekdays 9am-5pm)
     </h2>
+    <table>
+      <tr>
+        <td>Group One</td>
+        <td>Group Two</td>
+      </tr>
+      <tr>
+        <td>Group Three</td>
+        <td>group Four</td>
+      </tr>
+    </table>
     <ul>
       <li>Group 1: Every Tuesday (09:30 am - 12:30 pm)</li>
       <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
