--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <h1>Interactive Media</h1>
+    <!-- this is a heading -->
     <a href="week2/index.html"> Week Two</a>
     <img
       src="kitty.jpeg"
