--- a/week2/index.html
+++ b/week2/index.html
@@ -6,7 +6,57 @@
     <title>week two</title>
   </head>
   <body>
-    <h1>Week 2!</h1>
-    <a href="../index.html">Home</a>
+    <h1>How I see html structure for ssense.com</h1>
+    <header> 
+      
+       <center><h1>ssense</h1> </center>
+      <nav>
+        <ul>
+          <li>menswear</li>
+          <li>womenswear</li>
+          <li>everything else</li>
+          <li>sale</li>
+          <li>search</li>
+          <li>english</li>
+          <li>login</li>
+          <li>wishlist</li>
+          <li>shopping bag</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="market">
+<div>story one</div>
+<br>
+      </section>
+      <section id="culture">
+<div>story one</div>
+<br>
+      </section>
+      <section id="recent">
+<div>story one</div>
+<div>story two</div>
+<div>story three</div>
+<br>
+      </section>
+    </main>
+    <section id="shop menswear">
+<div><i>featured</i> THE ROW</div>
+<br>
+    </section>
+    <section id="shop womenswear">
+      <div><i>featured</i> RICK OWENS<div>
+      <br>
+          </section>
+          <section id="fashion questions">
+<ul>
+  <p>FASHION QUESTIONS</p>
+  <li>one</li>
+  <li>two</li>
+  <li>three</li>
+  <li>four</li>
+</ul>
+          </section>
+          <!--idk if any of this is even correct i am guessing!-->
   </body>
 </html>
