added new pages

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -6,6 +6,10 @@
     <title>assignment one</title>
   </head>
   <body>
-    <h1>Assignment One</h1>
+    <h1>Interactive Experience Research Project</h1>
+    <div class="topnav">
+      <a class="active" href="home/ndex.html">home</a>
+      <a href="assignment1/index.html">A1</a>
+    </div>
   </body>
 </html>
