--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Interactive Media</h1>
     <!-- this is a heading -->
-    <a href="week2/index.html"> Week Two</a>
+    <a href="assignment1/index.html"> A1</a>
     <img
       src="kitty.jpeg"
       alt="hello kitty wearing a pink flower and pink dress."
