--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Interactive Experience Research Project</h1>
     <div class="topnav">
-      <a class="active" href="home/ndex.html">home</a>
+      <a class="active" href="index.html">home</a>
       <a href="assignment1/index.html">A1</a>
     </div>
   </body>
