--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Interactive Experience Research Project</h1>
     <div class="topnav">
-      <a href="index.html">home</a>
-      <a href="assignment1/index.html">A1</a>
+      <a href="home/index.html">home</a>
+      <a href="index.html">A1</a>
     </div>
   </body>
 </html>
