--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -6,10 +6,20 @@
     <title>assignment one</title>
   </head>
   <body>
-    <h1>Interactive Experience Research Project</h1>
-    <div class="topnav">
-      <a href="home/index.html">home</a>
-      <a href="index.html">A1</a>
-    </div>
+    <header>
+      <nav>
+        nav bar
+        <div class="topnav">
+          <a href="assignment2/index.html">A2</a>
+          <a href="assignment3/index.html">A3</a>
+          <a href="home/index.html">Home</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <h1>Interactive Experience Research Project</h1>
+    </main>
+    <aside>dsjfkjsd</aside>
+    <footer>By Bambi Cheung 2024</footer>
   </body>
 </html>
