--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -10,9 +10,9 @@
       <nav>
         nav bar
         
-          <a href="assignment2">A2</a>
-          <a href="assignment3">A3</a>
-          <a href="home">Home</a>
+          <a href="assignment2/index.html">A2</a>
+          <a href="assignment3/index.HTML">A3</a>
+          <a href="index.html">Home</a>
         </div>
       </nav>
     </header>
