--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -7,14 +7,12 @@
   </head>
   <body>
     <header>
-      <nav>
-        nav bar
-        
-          <a href="assignment2/index.html">A2</a>
-          <a href="assignment3/index.HTML">A3</a>
-          <a href="index.html">Home</a>
-        </div>
-      </nav>
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
     </header>
     <main>
       <h1>Interactive Experience Research Project</h1>
