--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -6,16 +6,12 @@
     <title>assignment one</title>
   </head>
   <body>
-    <header>
-      <nav>
-        nav bar
-        
-          <a href="#assignment2/index.html">A2</a>
-          <a href="#assignment3/index.html">A3</a>
-          <a href="#index.html">Home</a>
-        </div>
-      </nav>
-    </header>
+    <nav>
+      <a href="#assignment2/index.html">A2</a>
+      <a href="#assignment3/index.html">A3</a>
+      <a href="#index.html">Home</a>
+    </nav>
+    <header></header>
     <main>
       <h1>Interactive Experience Research Project</h1>
     </main>
