--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <nav>
-      <a href="#assignment2/index.html">A2</a>
-      <a href="#assignment3/index.html">A3</a>
+      <a href="#">A1</a>
+      <a href="#assignment2">A2</a>
+      <a href="#assignment3">A3</a>
       <a href="#index.html">Home</a>
     </nav>
     <header></header>
