--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -8,9 +8,9 @@
   <body>
     <nav>
       <a href="#">A1</a>
-      <a href="#assignment2">A2</a>
-      <a href="#assignment3">A3</a>
-      <a href="#index.html">Home</a>
+      <a href="https://b-ambino.github.io/assignment2/index.html">A2</a>
+      <a href="https://b-ambino.github.io/assignment3/index.html">A3</a>
+      <a href="https://b-ambino.github.io/index.html">Home</a>
     </nav>
     <header></header>
     <main>
