--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>assignment three</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <a href="#">A1</a>
+      <a href="https://b-ambino.github.io/assignment2/index.html">A2</a>
+      <a href="https://b-ambino.github.io/assignment3/index.html">A3</a>
+      <a href="https://b-ambino.github.io/index.html">Home</a>
+    </nav>
+    <header></header>
+    <main>
+      <h1>Browser Based Interactive Project</h1>
+    </main>
+    <aside>dsjfkjsd</aside>
+    <footer>By Bambi Cheung 2024</footer>
+  </body>
 </html>
