--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav>
-      <a href="#">A1</a>
+      <a href="https://b-ambino.github.io/assignment1/index.html">A1</a>
       <a href="https://b-ambino.github.io/assignment2/index.html">A2</a>
       <a href="https://b-ambino.github.io/assignment3/index.html">A3</a>
       <a href="https://b-ambino.github.io/index.html">Home</a>
