--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="https://b-ambino.github.io/assignment1/index.html">A1</a>
       <a href="https://b-ambino.github.io/assignment2/index.html">A2</a>
       <a href="https://b-ambino.github.io/assignment3/index.html">A3</a>
-      <a href="https://b-ambino.github.io/index.html">Home</a>
+      <a href="https://b-ambino.github.io">Home</a>
     </nav>
     <header></header>
     <main>
