--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -10,11 +10,130 @@
       <a href="https://b-ambino.github.io/assignment1/index.html">A1</a>
       <a href="https://b-ambino.github.io/assignment2/index.html">A2</a>
       <a href="https://b-ambino.github.io/assignment3/index.html">A3</a>
-      <a href="https://b-ambino.github.io/index.html">Home</a>
+      <a href="https://b-ambino.github.io">Home</a>
     </nav>
     <header></header>
     <main>
       <h1>Interactive Experience Research Project</h1>
+      <br />
+
+      <h3>
+        1) What was the first thing you paid attention to when interacting with
+        the experience?
+      </h3>
+      The first thing i paid attention to was the little code memorisation game.
+      I was instantly intrigued by the little emoticon face and the fact that
+      the little screen said “press [symbol of alien] to begin”.
+      <h3>
+        2) Spend two minutes with the experience and create a list of each of
+        your discrete actions.
+      </h3>
+      <ul>
+        <li>Play the little memory game under the morton side</li>
+        <li>Sign up for their waitlist</li>
+        <li>Toggle sound</li>
+        <li>Adjust the memory games difficulty</li>
+        <li>
+          Click and tear a playtest report out of a little receipt printer
+        </li>
+        <li>View current playtest which is inactive</li>
+        <li>Click the little screen that has gameplay footage</li>
+        <li>Turn the console on and off</li>
+        <li>Click the information button</li>
+        <li>Click the discord link</li>
+        <li>Read about their game toggle open answers to questions</li>
+      </ul>
+      <h3>
+        3) What part of the experience did you spend the most time engaging
+        with?
+      </h3>
+
+      Definitely the memory game on Mortons side. I also spent a bit of time
+      reading the information regarding the game on the information page. It
+      seems like a really cute and fun game.
+
+      <h3>
+        4) What was the most common action in your two minute interaction with
+        the experience?
+      </h3>
+      Most common action was repetitively clicking the buttons for the memory
+      game in sequences. As you couldnt win the game, you could play again on a
+      different difficulty, hence further clicking of the buttons.
+      <h3>
+        5) What is your impression of the intended primary goal of the
+        interactive experience?
+      </h3>
+      The primary goal seems to be to get viewers interested enough to sign up
+      for the games waitlist. Perhaps morton is also a character in the game,
+      therefore you can create rapport with the game and its characters before
+      being able to play.
+      <h3>
+        6) How does the interactive experience communicate this primary goal?
+      </h3>
+
+      There is a large text box with scrolling text that reads “enter your
+      email” with a sign up button underneath. It also has a subheading that
+      says “access waiting list” Since this is the largest thing on the screen
+      other than Morton’s memory game, I believe it to be the primary goal.
+      <h3>
+        7) What is your impression of how the experience should be interacted
+        with over time? (For how long and how many different times)
+      </h3>
+
+      I think you can access it once or twice, but since it is a very simple
+      game, i believe users would get a bit bored after maybe 5-10 mins
+      depending on the person. Once you have read and signed up to the waitlist
+      you have basically completed all of the goals set by the website so it is
+      not necessary to access the site again, unless there is an update to the
+      game.
+
+      <h3>
+        8) How does the interactive experience communicate how it should be
+        interacted with over time?
+      </h3>
+
+      I think it communicates when you can interact by the available playtest.
+      As it currently says inactive, this would lead me to believe that there is
+      the possibility for it to become active, so its possible there could be
+      additions and updates to the website, however without this there is no
+      reason to interact with the website again once you expend the attributes.
+
+      <h3>
+        9) What other media forms (digital or otherwise) does the experience
+        reference?
+      </h3>
+
+      It references the game that it is advertising, using footage from the game
+      and imagery on both pages. It also references the simon memory game but
+      with a different design, the symbols are more robotic looking. There is
+      also an emoticon that responds to your clicking when playing the memory
+      game.
+
+      <h3>
+        10) What does this reference/s communicate to you about how you should
+        act when engaging with your research experience?
+      </h3>
+
+      I believe its wanting the user to be inquisitive, and playful. You should
+      engage based on touch and what is interesting to you. The game serves as a
+      fun starting point for anyone who isnt aware of the game, and then you can
+      click around and learn about the game and potentially sign up for the
+      waitlist if you feel inclined.
+
+      <h3>
+        11) What does this reference/s communicate to you about how you should
+        feel when engaging with your research experience?
+      </h3>
+
+      <h3>
+        12) What is the most frustrating part of the interaction to you and what
+        makes that part frustrating?
+      </h3>
+
+      <h3>
+        13) What is the most satisfying part of the interaction to you and what
+        makes that part satisfying?
+      </h3>
     </main>
     <aside>dsjfkjsd</aside>
     <footer>By Bambi Cheung 2024</footer>
