--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
     <header></header>
     <main>
-      <h1>Welcome Home biatch</h1>
+      <h1>By Bambi Cheung</h1>
     </main>
     <aside>dsjfkjsd</aside>
     <footer>By Bambi Cheung 2024</footer>
