--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <nav>
-      <a href="assignment1/index.html">A1</a>
+      <a href="https://b-ambino.github.io/assignment1/index.html">A1</a>
       <a href="https://b-ambino.github.io/assignment2/index.html">A2</a>
       <a href="https://b-ambino.github.io/assignment3/index.html">A3</a>
       <a href="https://b-ambino.github.io">Home</a>
     </nav>
     <header></header>
     <main>
-      <h1>By Bambi Cheung</h1>
+      <h1>By Bambi</h1>
     </main>
     <aside>dsjfkjsd</aside>
     <footer>By Bambi Cheung 2024</footer>
