--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -8,16 +8,14 @@
   </head>
   <body>
     <nav>
-      
-      <a href="assignment1/index.html">A1</a>
-      <a href="https://b-ambino.github.io/assignment2/index.html">A2</a>
-      <a href="https://b-ambino.github.io/assignment3/index.html">A3</a>
-      <a href="https://b-ambino.github.io">Home</a>
+      <a href="#">A1</a>
+      <a href="../assignment2/index.html">A2</a>
+      <a href="../assignment3/index.html">A3</a>
+      <a href="../index.html">Home</a>
     </nav>
-    </header>
+    <header></header>
     <main>
       <h1>Interactive Experience Research Project</h1>
-      <br />
 
       <h3>
         1) What was the first thing you paid attention to when interacting with
