--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <nav>
-      <a href="https://b-ambino.github.io/assignment1/index.html">A1</a>
-      <a href="https://b-ambino.github.io/assignment2/index.html">A2</a>
-      <a href="https://b-ambino.github.io/assignment3/index.html">A3</a>
-      <a href="https://b-ambino.github.io">Home</a>
+      <a href="../assignment1/index.html">A1</a>
+      <a href="../assignment2/index.html">A2</a>
+      <a href="#">A3</a>
+      <a href="../index.html">Home</a>
     </nav>
     <header></header>
     <main>
