--- a/week3/index.html
+++ b/week3/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css"/>
+    
   </head>
   <body>
     <h1 class="my-colors">Interactive Media</h1>
     <!-- this is a heading -->
     <h2 class="my-colors" id="instructor">
-      Instructor: Dr. Rohit Ashok Khot</h2>
-      <h2> Email: rohitashok.khot@rmit.edu.au
+      Instructor: Dr. Rohit Ashok Khot
+      <span data-email="email"> Email: rohitashok.khot@rmit.edu.au
       (Weekdays 9am-5pm)
-    </h2>
-
+      </span> </h2>
+<!--this is a comment-->
     <ul>
-      <li>Group 1: Every Tuesday (09:30 am - 12:30 pm)</li>
+      <li><strong>1: Every Tuesday (09:30 am - 12:30 pm)</strong></li>
       <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
       <li>Group 3: Every Thursday (09:30 am - 12:30 pm)</li>
       <li>Group 4: Every Thursday (01:30 pm - 04:30 pm)</li>
     </ul>
-    <h3 class="my-colors">
-        Venue: 09.02.20 (Tuesday) & 09.02.19 (Thursday
-    </h3>
+    <h2 class="my-colors">
+        Venue: 09.02.20 (Tuesday) & 09.02.19 (Thursday)
+    </h2>
     <p class="my-colors">
       Welcome to Interactive Media 1! Interactive Media 1 is about enabling you
       to engage with the fundamentals of interaction design through the use of
