improved stylesheet and updated html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home</title>
     <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
@@ -17,7 +25,7 @@
     <main>
       <h1>By Bambi</h1>
     </main>
-    <aside>dsjfkjsd</aside>
+    <aside>Homepage Under Construction!</aside>
     <footer>By Bambi Cheung 2024</footer>
   </body>
 </html>
