--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -20,140 +20,153 @@
       <a href="../assignment3/index.html">A3</a>
       <a href="../index.html">Home</a>
     </nav>
-    <header></header>
+    <header><h1>Interactive Experience Research Project</h1></header>
+    <br />
     <main>
-      <h1>Interactive Experience Research Project</h1>
-
-      <h3>
-        1) What was the first thing you paid attention to when interacting with
+      <h2>
+        1. What was the first thing you paid attention to when interacting with
         the experience?
-      </h3>
-      <p>
-        The first thing i paid attention to was the little code memorisation
+      </h2>
+      <div>
+        The first thing I paid attention to was the little code memorisation
         game. I was instantly intrigued by the little emoticon face and the fact
         that the little screen said “press [symbol of alien] to begin”.
-      </p>
-      <h3>
-        2) Spend two minutes with the experience and create a list of each of
+      </div>
+      <h2>
+        2. Spend two minutes with the experience and create a list of each of
         your discrete actions.
-      </h3>
+      </h2>
       <ul>
-        <li>Play the little memory game under the morton side</li>
-        <li>Sign up for their waitlist</li>
-        <li>Toggle sound</li>
-        <li>Adjust the memory games difficulty</li>
+        <li>♥ Sign up for their waitlist</li>
+        <li>♥ Toggle sound</li>
+        <li>♥ Adjust the memory games difficulty</li>
         <li>
-          Click and tear a playtest report out of a little receipt printer
+          ♥ Click and tear a playtest report out of a little receipt printer
         </li>
-        <li>View current playtest which is inactive</li>
-        <li>Click the little screen that has gameplay footage</li>
-        <li>Turn the console on and off</li>
-        <li>Click the information button</li>
-        <li>Click the discord link</li>
-        <li>Read about their game toggle open answers to questions</li>
+        <li>♥ View current playtest which is inactive</li>
+        <li>♥ Click the little screen that has gameplay footage</li>
+        <li>♥ Turn the console on and off</li>
+        <li>♥ Click the information button</li>
+        <li>♥ Click the discord link</li>
+        <li>♥ Read about their game toggle open answers to questions</li>
       </ul>
-      <h3>
-        3) What part of the experience did you spend the most time engaging
+      <h2>
+        3. What part of the experience did you spend the most time engaging
         with?
-      </h3>
-      <p>
+      </h2>
+      <div>
         Definitely the memory game on Mortons side. I also spent a bit of time
         reading the information regarding the game on the information page. It
         seems like a really cute and fun game.
-      </p>
+      </div>
 
-      <h3>
-        4) What was the most common action in your two minute interaction with
+      <h2>
+        4. What was the most common action in your two minute interaction with
         the experience?
-      </h3>
-      <p>
+      </h2>
+      <div>
         Most common action was repetitively clicking the buttons for the memory
         game in sequences. As you couldnt win the game, you could play again on
         a different difficulty, hence further clicking of the buttons.
-      </p>
-      <h3>
-        5) What is your impression of the intended primary goal of the
+      </div>
+      <h2>
+        5. What is your impression of the intended primary goal of the
         interactive experience?
-      </h3>
-      <p>
+      </h2>
+      <div>
         he primary goal seems to be to get viewers interested enough to sign up
         for the games waitlist. Perhaps morton is also a character in the game,
         therefore you can create rapport with the game and its characters before
         being able to play.
-      </p>
-      <h3>
-        6) How does the interactive experience communicate this primary goal?
-      </h3>
-
-      <p>
+      </div>
+      <h2>
+        6. How does the interactive experience communicate this primary goal?
+      </h2>
+      <div>
         There is a large text box with scrolling text that reads “enter your
         email” with a sign up button underneath. It also has a subheading that
         says “access waiting list” Since this is the largest thing on the screen
         other than Morton’s memory game, I believe it to be the primary goal.
-      </p>
-      <h3>
-        7) What is your impression of how the experience should be interacted
+      </div>
+      <h2>
+        7. What is your impression of how the experience should be interacted
         with over time? (For how long and how many different times)
-      </h3>
-      <p>
+      </h2>
+      <div>
         I think you can access it once or twice, but since it is a very simple
         game, i believe users would get a bit bored after maybe 5-10 mins
         depending on the person. Once you have read and signed up to the
         waitlist you have basically completed all of the goals set by the
         website so it is not necessary to access the site again, unless there is
         an update to the game.
-      </p>
-
-      <h3>
-        8) How does the interactive experience communicate how it should be
+      </div>
+      <h2>
+        8. How does the interactive experience communicate how it should be
         interacted with over time?
-      </h3>
-      <p>
+      </h2>
+      <div>
         I think it communicates when you can interact by the available playtest.
         As it currently says inactive, this would lead me to believe that there
         is the possibility for it to become active, so its possible there could
         be additions and updates to the website, however without this there is
         no reason to interact with the website again once you expend the
         attributes.
-      </p>
-      <h3>
-        9) What other media forms (digital or otherwise) does the experience
+      </div>
+      <h2>
+        9. What other media forms (digital or otherwise) does the experience
         reference?
-      </h3>
-      <p>
-        It references the game that it is advertising, using footage from the
-        game and imagery on both pages. It also references the simon memory game
-        but with a different design, the symbols are more robotic looking. There
-        is also an emoticon that responds to your clicking when playing the
-        memory game.
-      </p>
-      <h3>
-        10) What does this reference/s communicate to you about how you should
+      </h2>
+      <div>
+        It references the game 'Simon' which is a memory game where you remember
+        colours in an order to win, and it gets progressively more complicated
+        every round. This mini game on the website has the same exact principle,
+        but with little symbols that perhaps reference the game they have
+        designed and are intending to advertise on this website.
+      </div>
+      <h2>
+        10. What does this reference/s communicate to you about how you should
         act when engaging with your research experience?
-      </h3>
-      <p>
-        I believe its wanting the user to be inquisitive, and playful. You
-        should engage based on touch and what is interesting to you. The game
-        serves as a fun starting point for anyone who isnt aware of the game,
-        and then you can click around and learn about the game and potentially
-        sign up for the waitlist if you feel inclined.
-      </p>
-      <h3>
-        11) What does this reference/s communicate to you about how you should
+      </h2>
+      <div>
+        I believe its wanting the user to be inquisitive, and playful. It
+        suggests that whilst the game company and their projects are fun and
+        entertaining, they also require some thought. It could also could
+        reference the fact that their designs are to be enjoyed by all ages.
+      </div>
+      <h2>
+        11. What does this reference/s communicate to you about how you should
         feel when engaging with your research experience?
-      </h3>
-
-      <h3>
-        12) What is the most frustrating part of the interaction to you and what
+      </h2>
+      <div>
+        The references communicate that perhaps this mini game is linked to
+        something else that is large and interactive. The reference to 'Simon'
+        the memory game suggests that this could be an interactive project that
+        requires a bit of thought and perhaps strategy.
+      </div>
+      <h2>
+        12. What is the most frustrating part of the interaction to you and what
         makes that part frustrating?
-      </h3>
-
-      <h3>
-        13) What is the most satisfying part of the interaction to you and what
+      </h2>
+      <div>
+        The most frustrating part was the fact that I had no idea what this
+        websites initial purpose was as there was no real indicators or
+        marketing of the game they were promoting. It took me far too long to
+        realise that this was indeed promoting a sepereate company and creation,
+        not just the mini game on the front page of this website.
+      </div>
+      <h2>
+        13. What is the most satisfying part of the interaction to you and what
         makes that part satisfying?
-      </h3>
+      </h2>
+      <div>
+        I think the most satisfying part of the interaction was winning the mini
+        game at the highest level! I also feel like the design was incredibly
+        cohesive and told a story that referenced the game companies core
+        aesthetic choices and I feel like that it is a satisfying match in that
+        regard.
+      </div>
     </main>
-    <aside>dsjfkjsd</aside>
-    <footer>By Bambi Cheung 2024</footer>
+    <aside>By Bambi Cheung</aside>
+    <footer></footer>
   </body>
 </html>
