--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -21,152 +21,193 @@
       <a href="../index.html">Home</a>
     </nav>
     <header><h1>Interactive Experience Research Project</h1></header>
-    <br />
-    <main>
-      <h2>
-        1. What was the first thing you paid attention to when interacting with
-        the experience?
-      </h2>
-      <div>
-        The first thing I paid attention to was the little code memorisation
-        game. I was instantly intrigued by the little emoticon face and the fact
-        that the little screen said “press [symbol of alien] to begin”.
-      </div>
-      <h2>
-        2. Spend two minutes with the experience and create a list of each of
-        your discrete actions.
-      </h2>
-      <ul>
-        <li>♥ Sign up for their waitlist</li>
-        <li>♥ Toggle sound</li>
-        <li>♥ Adjust the memory games difficulty</li>
-        <li>
-          ♥ Click and tear a playtest report out of a little receipt printer
-        </li>
-        <li>♥ View current playtest which is inactive</li>
-        <li>♥ Click the little screen that has gameplay footage</li>
-        <li>♥ Turn the console on and off</li>
-        <li>♥ Click the information button</li>
-        <li>♥ Click the discord link</li>
-        <li>♥ Read about their game toggle open answers to questions</li>
-      </ul>
-      <h2>
-        3. What part of the experience did you spend the most time engaging
-        with?
-      </h2>
-      <div>
-        Definitely the memory game on Mortons side. I also spent a bit of time
-        reading the information regarding the game on the information page. It
-        seems like a really cute and fun game.
-      </div>
 
-      <h2>
-        4. What was the most common action in your two minute interaction with
-        the experience?
-      </h2>
-      <div>
-        Most common action was repetitively clicking the buttons for the memory
-        game in sequences. As you couldnt win the game, you could play again on
-        a different difficulty, hence further clicking of the buttons.
+    <div id="grid-container">
+      <div id="box1">
+        <h2>
+          1. What was the first thing you paid attention to when interacting
+          with the experience?
+        </h2>
+        <p>
+          The first thing I paid attention to was the little code memorisation
+          game. I was instantly intrigued by the little emoticon face and the
+          fact that the little screen said “press [symbol of alien] to begin”. I
+          felt like because of this interaction I ignored a lot of the other
+          sections.
+          <br />
+          <br />
+          I also paid attention to the colour scheme of the website as it
+          informed a lot of thematic information about what the website may be
+          involved with.
+        </p>
       </div>
-      <h2>
-        5. What is your impression of the intended primary goal of the
-        interactive experience?
-      </h2>
-      <div>
-        he primary goal seems to be to get viewers interested enough to sign up
-        for the games waitlist. Perhaps morton is also a character in the game,
-        therefore you can create rapport with the game and its characters before
-        being able to play.
+      <div id="box2">
+        <h2>
+          2. Spend two minutes with the experience and create a list of each of
+          your discrete actions.
+        </h2>
+        <ul>
+          <li>♡ Sign up for their waitlist</li>
+          <li>♡ Toggle sound</li>
+          <li>♡ Adjust the memory games difficulty</li>
+          <li>
+            ♡ Click and tear a playtest report out of a little receipt printer
+          </li>
+          <li>♡ View current playtest which is inactive</li>
+          <li>♡ Click the little screen that has gameplay footage</li>
+          <li>♡ Turn the console on and off</li>
+          <li>♡ Click the information button</li>
+          <li>♡ Click the discord link</li>
+          <li>♡ Read about their game toggle open answers to questions</li>
+        </ul>
       </div>
-      <h2>
-        6. How does the interactive experience communicate this primary goal?
-      </h2>
-      <div>
-        There is a large text box with scrolling text that reads “enter your
-        email” with a sign up button underneath. It also has a subheading that
-        says “access waiting list” Since this is the largest thing on the screen
-        other than Morton’s memory game, I believe it to be the primary goal.
+      <div id="box3">
+        <h2>
+          3. What part of the experience did you spend the most time engaging
+          with?
+        </h2>
+
+        <p>
+          Definitely the memory game on Mortons side. I found myself playing
+          until I finished every level, and then I discovered the difficulty
+          meter beside it and found that I played until I couldn't anymore!
+          <br />
+          <br />
+          I also spent a bit of time reading the information regarding the game
+          on the information page. It seems like a really cute and fun game.
+        </p>
       </div>
-      <h2>
-        7. What is your impression of how the experience should be interacted
-        with over time? (For how long and how many different times)
-      </h2>
-      <div>
-        I think you can access it once or twice, but since it is a very simple
-        game, i believe users would get a bit bored after maybe 5-10 mins
-        depending on the person. Once you have read and signed up to the
-        waitlist you have basically completed all of the goals set by the
-        website so it is not necessary to access the site again, unless there is
-        an update to the game.
+      <div id="box4">
+        <h2>
+          4. What was the most common action in your two minute interaction with
+          the experience?
+        </h2>
+        <p>
+          Most common action was repetitively clicking the buttons for the
+          memory game in sequences. As you couldnt win the game, you could play
+          again on a different difficulty, hence further clicking of the
+          buttons.
+        </p>
       </div>
-      <h2>
-        8. How does the interactive experience communicate how it should be
-        interacted with over time?
-      </h2>
-      <div>
-        I think it communicates when you can interact by the available playtest.
-        As it currently says inactive, this would lead me to believe that there
-        is the possibility for it to become active, so its possible there could
-        be additions and updates to the website, however without this there is
-        no reason to interact with the website again once you expend the
-        attributes.
+      <div id="box5">
+        <h2>
+          5. What is your impression of the intended primary goal of the
+          interactive experience?
+        </h2>
+        <p>
+          The primary goal seems to be to get viewers interested enough to sign
+          up for the games waitlist. Perhaps morton is also a character in the
+          game, therefore you can create rapport with the game and its
+          characters before being able to play.
+        </p>
       </div>
-      <h2>
-        9. What other media forms (digital or otherwise) does the experience
-        reference?
-      </h2>
-      <div>
-        It references the game 'Simon' which is a memory game where you remember
-        colours in an order to win, and it gets progressively more complicated
-        every round. This mini game on the website has the same exact principle,
-        but with little symbols that perhaps reference the game they have
-        designed and are intending to advertise on this website.
+      <div id="box6">
+        <h2>
+          6. How does the interactive experience communicate this primary goal?
+        </h2>
+        <p>
+          There is a large text box with scrolling text that reads “enter your
+          email” with a sign up button underneath. I believe the website is
+          wanting the target demographic of video game enjoyers to sign up for
+          the developers early access, which is evidently no longer available on
+          the website. It also has a subheading that says “access waiting list”
+          Since this is the largest thing on the screen other than Morton’s
+          memory game, I believe it to be the primary goal.
+        </p>
       </div>
-      <h2>
-        10. What does this reference/s communicate to you about how you should
-        act when engaging with your research experience?
-      </h2>
-      <div>
-        I believe its wanting the user to be inquisitive, and playful. It
-        suggests that whilst the game company and their projects are fun and
-        entertaining, they also require some thought. It could also could
-        reference the fact that their designs are to be enjoyed by all ages.
+      <div id="box7">
+        <h2>
+          7. What is your impression of how the experience should be interacted
+          with over time? (For how long and how many different times)
+        </h2>
+        <p>
+          I think you can access it once or twice, but since it is a very simple
+          game, i believe users would get a bit bored after maybe 5-10 mins
+          depending on the person. Once you have read and signed up to the
+          waitlist you have basically completed all of the goals set by the
+          website so it is not necessary to access the site again, unless there
+          is an update to the game.
+        </p>
       </div>
-      <h2>
-        11. What does this reference/s communicate to you about how you should
-        feel when engaging with your research experience?
-      </h2>
-      <div>
-        The references communicate that perhaps this mini game is linked to
-        something else that is large and interactive. The reference to 'Simon'
-        the memory game suggests that this could be an interactive project that
-        requires a bit of thought and perhaps strategy.
+      <div id="box8">
+        <h2>
+          8. How does the interactive experience communicate how it should be
+          interacted with over time?
+        </h2>
+        <p>
+          I think it communicates when you can interact by the available
+          playtest. As it currently says inactive, this would lead me to believe
+          that there is the possibility for it to become active, so its possible
+          there could be additions and updates to the website, however without
+          this there is no reason to interact with the website again once you
+          expend the attributes.
+        </p>
       </div>
-      <h2>
-        12. What is the most frustrating part of the interaction to you and what
-        makes that part frustrating?
-      </h2>
-      <div>
-        The most frustrating part was the fact that I had no idea what this
-        websites initial purpose was as there was no real indicators or
-        marketing of the game they were promoting. It took me far too long to
-        realise that this was indeed promoting a sepereate company and creation,
-        not just the mini game on the front page of this website.
+      <div id="box9">
+        <h2>
+          9. What other media forms (digital or otherwise) does the experience
+          reference?
+        </h2>
+        <p>
+          It references the game 'Simon' which is a memory game where you
+          remember colours in an order to win, and it gets progressively more
+          complicated every round. This mini game on the website has the same
+          exact principle, but with little symbols that perhaps reference the
+          game they have designed and are intending to advertise on this
+          website.
+        </p>
       </div>
-      <h2>
-        13. What is the most satisfying part of the interaction to you and what
-        makes that part satisfying?
-      </h2>
-      <div>
-        I think the most satisfying part of the interaction was winning the mini
-        game at the highest level! I also feel like the design was incredibly
-        cohesive and told a story that referenced the game companies core
-        aesthetic choices and I feel like that it is a satisfying match in that
-        regard.
+      <div id="box10">
+        <h2>
+          10. What does this reference/s communicate to you about how you should
+          act when engaging with your research experience?
+        </h2>
+        <p>
+          I believe its wanting the user to be inquisitive, and playful. It
+          suggests that whilst the game company and their projects are fun and
+          entertaining, they also require some thought. It could also could
+          reference the fact that their designs are to be enjoyed by all ages.
+        </p>
       </div>
-    </main>
-    <aside>By Bambi Cheung</aside>
-    <footer></footer>
+      <div id="box11">
+        <h2>
+          11. What does this reference/s communicate to you about how you should
+          feel when engaging with your research experience?
+        </h2>
+        <p>
+          The references communicate that perhaps this mini game is linked to
+          something else that is large and interactive. The reference to 'Simon'
+          the memory game suggests that this could be an interactive project
+          that requires a bit of thought and perhaps strategy.
+        </p>
+      </div>
+      <div id="box12">
+        <h2>
+          12. What is the most frustrating part of the interaction to you and
+          what makes that part frustrating?
+        </h2>
+        <p>
+          The most frustrating part was the fact that I had no idea what this
+          websites initial purpose was as there was no real indicators or
+          marketing of the game they were promoting. It took me far too long to
+          realise that this was indeed promoting a sepereate company and
+          creation, not just the mini game on the front page of this website.
+        </p>
+      </div>
+      <div id="box13">
+        <h2>
+          13. What is the most satisfying part of the interaction to you and
+          what makes that part satisfying?
+        </h2>
+
+        <p>
+          I think the most satisfying part of the interaction was winning the
+          mini game at the highest level! I also feel like the design was
+          incredibly cohesive and told a story that referenced the game
+          companies core aesthetic choices and I feel like that it is a
+          satisfying match in that regard.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
