added week 4 class work

--- a/week4/boxmodel/index.html
+++ b/week4/boxmodel/index.html
@@ -16,8 +16,13 @@
   <body>
     <!-- <h1>hello world</h1> -->
     <div class="outer">
-      <div class="inner"><p>hello i am bambi</p></div>
+      <div class="inner">
+        <p>hello i am bambi</p>
+    </div>
       <div class="inner"></div>
+      <div class="inner"></div>
+      <div class="inner"></div>
+      
     </div>
   </body>
 </html>
