improves style.css

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -20,9 +20,26 @@
       <a href="../assignment3/index.html">A3</a>
       <a href="../index.html">Home</a>
     </nav>
-    <header><h1>Interactive Experience Research Project</h1></header>
+    <header>
+      <h1>Interactive Experience Research Project</h1>
+      <br />
+      <br />
+      <h2>
+        <span
+          >A look at my experience interacting with the website for
+          Downstream.</span
+        >
+      </h2>
+    </header>
 
     <div id="grid-container">
+      <div id="box14">
+        <!-- I added the photo last so I had to name the box 14 instead of going through and editing everything whoops! -->
+        <img
+          src="playtest.downstream.png"
+          alt="screenshot of the website for downstream. A grey metal cartoon background that appears to house an 80s style retro graphic of a console. "
+        />
+      </div>
       <div id="box1">
         <h2>
           1. What was the first thing you paid attention to when interacting
