added comments to the style.css and index.css

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -19,14 +19,21 @@
       <a href="../assignment2/index.html">A2</a>
       <a href="../assignment3/index.html">A3</a>
       <a href="../index.html">Home</a>
+      <!-- I know the homepage isnt necessary but I felt it was necessary,
+       I will add to it as I go! -->
     </nav>
     <header>
+      <!-- Since this is for assignment one, I wanted my website to stay 
+        cohesive so I will name each page the assignment name so it all matches. -->
       <h1>Interactive Experience Research Project</h1>
       <br />
       <br />
       <h2>
-        <span
-          >A look at my experience interacting with the website for
+        <!-- I wanted a little subheading to create a visual 
+          gap between heading one and the body of the webpage.
+           This creates a nice visual break and a cleaner look.  -->
+        <span>
+          A look at my experience interacting with the website for
           Downstream.</span
         >
       </h2>
@@ -39,6 +46,11 @@
           src="playtest.downstream.png"
           alt="screenshot of the website for downstream. A grey metal cartoon background that appears to house an 80s style retro graphic of a console. "
         />
+        <!-- I didnt want to add too many photos as I felt this would be 
+          distracting to the viewer. I felt that the once page screenshot
+          would be enough for the audience and also create a solid start 
+          to the rest of the page. I didnt want to add too many containers 
+          in case it was visually overwhelming. -->
       </div>
       <div id="box1">
         <h2>
@@ -63,6 +75,8 @@
           2. Spend two minutes with the experience and create a list of each of
           your discrete actions.
         </h2>
+        <!-- I didnt like the generic dot points and didnt know how too add 
+        seperate code for these hearts so they are just part of the text. -->
         <ul>
           <li>♡ Sign up for their waitlist</li>
           <li>♡ Toggle sound</li>
@@ -227,4 +241,5 @@
       </div>
     </div>
   </body>
+  <!-- Hope you liked my page! thanks for looking :3 -->
 </html>
