added more to assigment

--- a/mediaplayer/index.html
+++ b/mediaplayer/index.html
@@ -36,17 +36,12 @@
     <!-- Main Content Section -->
     <main class="container">
       <div class="media-player">
-        <section id="video-container">
         <video id="meditation-video" src="meditation.mp4" controls autoplay loop>
         </video>
-        </section>
          <!-- Media Player Section -->
-         <section id="audio-container">
-        <audio id="audio" src="erokia_ambient-wave-56-msfxp7-78.mp3" type="audio/mp3"></audio>
-        </section>
-        <section id="media-player-controls">
+        <audio id="audio-player" src="erokia_ambient-wave-56-msfxp7-78.mp3" type=></audio>
         <div class="custom-controls">
-          <button id="play-pause-button" onclick="togglePlayPause()">
+          <button id="play-pause-button">
             <img
             id="play-pause-img"
             width="64" 
@@ -56,8 +51,8 @@
           </button>
           </div>
           <div class="progress-bar">
-            <span id="progress-bar-fill"> </span>
-            </div>
+            <span id="progress-bar-fill"></span>
+          </div>
         
       
 
