finished code, need to add comments

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -33,12 +33,9 @@ the centre box into three sections
       <a href="../assignment3/index.html">A3</a>
       <a href="../index.html">Home</a>
     </nav>
-<div class="heading-one">
-Music For Study and Focus
-
-</div>
-
     <div class="outer">
+      <h1>Music For Study and Focus </h1>
+<h3> ......clear your mind......focus......enjoy life......study hard......</h3>
       <section class="audio">
         <audio src="erokia_ambient-wave-56-msfxp7-78.mp3" id="my-audio"></audio>
       </section>
@@ -85,8 +82,24 @@ Music For Study and Focus
                   </button>
                 </section>
                 <section class="messages">
-                  
                 </section>
+
+                <br>
+                <br>
+                <br>
+
+                <div class="added-sounds">
+                  <audio src="https://www.soundjay.com/nature/sounds/rain-01.mp3" id="rain-audio" loop ></audio>
+                  <audio src="https://www.soundjay.com/nature/sounds/ocean-wave-1.mp3" id="ocean-audio" loop ></audio>
+                  <audio src="https://www.soundjay.com/nature/sounds/river-2.mp3" id="river-audio" loop ></audio>
+                  <audio src="https://www.soundjay.com/ambient/sounds/bus-interior-2.mp3" id="transport-audio" loop ></audio>
+                  <audio src="https://www.soundjay.com/ambient/sounds/spring-weather-1.mp3" id="outdoors-audio" loop></audio>
+                  <button id="rain">rain</button>
+                  <button id="ocean">ocean</button>
+                  <button id="river">river</button>
+                  <button id="transport">transport</button>
+                  <button id="outdoors">outdoors</button>
+                </div>
         <!-- <button id="fullscreen-btn">
           <img
             id="fullscreen-img"
@@ -95,12 +108,12 @@ Music For Study and Focus
             width="48"
             height="48"
           /> -->
-        </button>
-      </section>
+      
       <!-- <section class="timeline">
         <button id="step-one-btn">step one</button>
         <button id="step-two-btn">step two</button>
       </section> -->
-    </div>
+      </div>
+    <footer> All icons Sourced from <a href ="Icons8.com"> icons8.com</a> / Ambient Noise sourced from <a href="www.soundjay.com">soundjay.com</a></footer>
   </body>
 </html>
